# dsaProject3

./: CMakeLists.txt  README.md  SFMLhelper.cpp  SFMLhelper.h  heapSort.cpp  heapSort.h  main.cpp  merge.cpp  mergeSort.cpp  mergeSort.h
output/: out2.txt
